--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Hand Gesture Game</title>
+    <title>Battle of Elements</title>
 </head>
 <body>
 
     <section class="header">
-        <h1>Hand Gesture Game</h1>
+        <h1>Battle of Elements</h1>
     </section>
 
     <section class="main-content">
@@ -21,11 +21,15 @@
             <h2 class="player-score">Player: <span>0</span></h2>
             <h2 class="computer-score">Computer: <span>0</span></h2>
         </div>
+        <div class="instructions">
+            <h2>Game Instructions</h2>
+            <p>🌊 = Water Element<br>🔥 = Fire Element<br>🌱 = Earth Element</p>
+        </div>
         <div class="game-content">
             <div class="game-choices">
-                <div class="choice">Rock</div>
-                <div class="choice">Paper</div>
-                <div class="choice">Scissors</div>
+                <div class="choice">🌊</div>
+                <div class="choice">🔥</div>
+                <div class="choice">🌱</div>
             </div>
         </div>
         <div class="game-result">
