Added game content styles

--- a/index.html
+++ b/index.html
@@ -17,26 +17,29 @@
     </section>
 
     <section class="main-content">
+        <h2 class="score-text">Player Score</h2>
         <div class="score-display">
             <h2 class="player-score">Player: <span>0</span></h2>
             <h2 class="computer-score">Computer: <span>0</span></h2>
         </div>
-        <div class="instructions">
-            <h2>Game Instructions</h2>
-            <p>🌊 = Water Element<br>🔥 = Fire Element<br>🌱 = Earth Element</p>
-        </div>
         <div class="game-content">
+            <h2 class="element-text">Pick an Element:</h2>
             <div class="game-choices">
                 <div class="choice">🌊</div>
                 <div class="choice">🔥</div>
                 <div class="choice">🌱</div>
             </div>
         </div>
+        <h2 class="result-text">Results</h2>
         <div class="game-result">
-            <div class="player-choice">Player: </div>
-            <div class="computer-choice">Computer: </div>
+            <div class="player-choice">Player: <span>🌊</span></div>
+            <div class="computer-choice">Computer: <span>🔥</span></div>
         </div>
     </section>
+    <div class="instructions">
+        <h2>Game Instructions</h2>
+        <p>🌊 = Water Element<br>🔥 = Fire Element<br>🌱 = Earth Element</p>
+    </div>
 
     <script src="./script/script.js"></script>
 </body>
