--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         </div>
     </section>
     <div class="instructions">
-        <h2>Game Instructions</h2>
-        <p>🌊 = Water Element<br>🔥 = Fire Element<br>🌱 = Earth Element</p>
+        <h2 class="instruct-title">Game Instructions</h2>
+        <p class="instruct-text" >Player selects element of choice, then Computer will select theirs.<br>Winning combinations are below.<br>🌊 Element puts out 🔥<br>🔥 Element burns 🌱<br>🌱 Element absorbs 🌊</p>
     </div>
 
     <script src="./script/script.js"></script>
