Added IDs to game choices

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <div class="game-content">
             <h2 class="element-text">Pick an Element:</h2>
             <div class="game-choices">
-                <div class="choice">🌊</div>
-                <div class="choice">🔥</div>
-                <div class="choice">🌱</div>
+                <div id="water" class="choice">🌊</div>
+                <div id="fire" class="choice">🔥</div>
+                <div id="earth" class="choice">🌱</div>
             </div>
         </div>
         <h2 class="result-text">Results</h2>
