--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         </div>
         <h2 class="result-text">Results</h2>
         <div class="game-result">
-            <div class="player-choice">Player: <span>🌊</span></div>
-            <div class="computer-choice">Computer: <span>🔥</span></div>
+            <div class="player-choice">Player: <span id="player-result">🌊</span></div>
+            <div class="computer-choice">Computer: <span id="computer-result">🔥</span></div>
         </div>
     </section>
     <div class="instructions">
