--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
         <div class="game-content">
             <h2 class="element-text">Pick an Element:</h2>
             <div class="game-choices">
-                <div id="water" class="button">🌊</div>
-                <div id="fire" class="button">🔥</div>
-                <div id="earth" class="button">🌱</div>
+                <div id="water" class="button" data-selection="water">🌊</div>
+                <div id="fire" class="button" data-selection="fire">🔥</div>
+                <div id="earth" class="button" data-selection="earth">🌱</div>
             </div>
         </div>
         <h2 class="result-text">Results</h2>
         <div class="game-result">
-            <div class="player-choice">Player: <span id="result">🌊</span></div>
-            <div class="computer-choice">Computer: <span id="result">🔥</span></div>
+            <div class="player-choice">Player: <span id="-player-result"></span></div>
+            <div class="computer-choice">Computer: <span id="computer-result"></span></div>
         </div>
     </section>
     <div class="instructions">
