Edit class names

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <section class="main-content">
         <h2 class="score-text">Player Score</h2>
         <div class="score-display">
-            <h2 class="player-score">Player: <span>0</span></h2>
-            <h2 class="computer-score">Computer: <span>0</span></h2>
+            <h2 class="player-score">Player: <span class="player-score-result">0</span></h2>
+            <h2 class="computer-score">Computer: <span class="computer-score-result">0</span></h2>
         </div>
         <div class="game-content">
             <h2 class="element-text">Pick an Element:</h2>
