--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     
     <div class="instructions">
         <h2 class="instruct-title">Game Instructions</h2>
-        <p class="instruct-text" >Player selects element of choice, then Computer will select theirs.<br>Winning combinations are below.<br>🌊 Element puts out 🔥<br>🔥 Element burns 🌱<br>🌱 Element absorbs 🌊</p>
+        <p class="instruct-text" >Player selects element of choice, then Computer will select theirs.<br>Winning combinations are below.<br>🌊 Element puts out 🔥<br>🔥 Element burns 🌱<br>🌱 Element absorbs 🌊<br>No score added for a Tie</p>
     </div>
 
     <script src="./script/script.js"></script>
